
* Breaking backward compatibility bumps the major (and resets the minor 
  and patch)
* New additions without breaking backward compatibility bumps the minor 
  (and resets the patch)
* Bug fixes and misc changes bumps the patch



qdapTools 0.1.1
----------------------------------------------------------------

BUG FIXES

NEW FEATURES

MINOR FEATURES

IMPROVEMENTS

* `lookup` and `hash_look` family of functions gains a major speed boost thanks 
  to @Arun Srinivasan.  See: https://gist.github.com/arunsrinivasan/ee2d9ef43bdc02c32958

CHANGES



qdapTools 0.1.0
----------------------------------------------------------------

This release moves the `list2df` family of functions from `qdap` to qdapTools.  
This completes the process of moving generic `qdap` tools into a separate 
qdapTools package.

CHANGES

* The `list2df` family of functions have been moved from `qdap` to `qdapTools`.
  These functions include: `list2df`, `matrix2df`, `vect2df`, `list_df2df`, 
  `list_vect2df`, `counts2list`, & `vect2list`.



qdapTools 0.0.3
----------------------------------------------------------------

NEW FEATURES

* `id` a function to generate a sequence of integers the `length`/`nrow` of an 
  object.

* `pad` a convenience wrapper for `sprintf` that pads the front end of strings 
  with spaces or 0s.


qdapTools 0.0.2
----------------------------------------------------------------

First push to CRAN.

* `%l*%` added as a binary operator form of `lookup` that returns a factor when 
  one is supplied in column 2 of the `key.match` `data.frame` supplied. 
  Suggestion by Kirill Muller see: 
  https://github.com/trinker/qdap/issues/167#issuecomment-41009219

qdapTools 0.0.1
----------------------------------------------------------------

Tools used by qdap that may be of use outside of the context of text analysis 
realated tasks, have been moved to a separate package, qdapTools.  This is the 
first installment of the package.
