@@ -15,6 +15,7 @@ export(list_df2df)
 export(list_vect2df)
 export(lookup)
 export(matrix2df)
+export(mtabulate)
 export(pad)
 export(repo2github)
 export(sec2hms)
